--- a/app/components/modal/modal.module.css
+++ b/app/components/modal/modal.module.css
@@ -1,10 +1,9 @@
 .modal_layout {
-  position: fixed;
+  position: absolute;
   top: 5.5rem;
   width: 100%;
   padding-inline: 0.5rem;
   z-index: 80;
-  top: 10;
 }
 
 .content_layout {
